<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_home_text_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/washedOutGreen"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_x_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_home_text_notification_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center_horizontal"
            android:text="@string/fragment_home_notification_header"
            android:textAlignment="center"
            android:textSize="@dimen/header_small" />

        <TextView
            android:id="@+id/fragment_home_text_notification_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_home_text_temperature_data_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/fragment_home_temperature_data_header"
        android:textSize="@dimen/header_x_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_text_notification" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/fragment_home_temperature_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_text_temperature_data_header" />

    <TextView
        android:id="@+id/fragment_home_text_humidity_data_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/fragment_home_humidity_data_header"
        android:textSize="@dimen/header_x_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_temperature_chart" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/fragment_home_humidity_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_text_humidity_data_header" />
</androidx.constraintlayout.widget.ConstraintLayout>